--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.5",
+    "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "expo": "~36.0.0",
     "expo-barcode-scanner": "^8.0.0",
@@ -17,21 +19,20 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
+    "react-native-gesture-handler": "~1.5.0",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-open-map": "^3.0.0",
+    "react-native-reanimated": "~1.4.0",
     "react-native-router-flux": "^4.0.6",
+    "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.0",
+    "react-navigation-stack": "latest",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "react-native-gesture-handler": "~1.5.0",
-    "react-native-reanimated": "~1.4.0",
-    "react-native-safe-area-context": "0.6.0",
-    "@react-native-community/masked-view": "0.1.5",
-    "react-navigation-stack": "latest"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
