--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.5",
+    "@react-native-community/masked-view": "^0.1.5",
     "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "expo": "~36.0.0",
@@ -24,12 +24,12 @@
     "react-native-open-map": "^3.0.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-router-flux": "^4.0.6",
-    "react-native-safe-area-context": "0.6.0",
+    "react-native-safe-area-context": "^0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.0",
-    "react-navigation-stack": "latest",
+    "react-navigation-stack": "^2.1.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
@@ -39,6 +39,7 @@
     "@types/react": "~16.9.0",
     "@types/react-native": "~0.60.23",
     "babel-preset-expo": "~8.0.0",
+    "react-native-table-component": "^1.2.1",
     "typescript": "~3.6.3"
   },
   "private": true
