--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "react": "~16.9.0",
-    "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
@@ -40,10 +39,17 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@testing-library/react-native": "^5.0.3",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/react": "~16.9.0",
     "@types/react-native": "~0.60.23",
     "babel-preset-expo": "~8.0.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "react-dom": "^16.9.0",
     "react-native-table-component": "^1.2.1",
+    "react-native-testing-library": "^1.12.0",
     "typescript": "~3.6.3"
   },
   "private": true
