--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
     "expo-font": "~8.0.0",
     "expo-permissions": "latest",
     "jwt-decode": "^2.2.0",
-    "prop-types": "^15.7.2",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
+    "prop-types": "^15.7.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-loading-spinner-overlay": "^1.0.1",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-open-map": "^3.0.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-router-flux": "^4.0.6",
