--- a/package.json
+++ b/package.json
@@ -15,13 +15,15 @@
     "expo-barcode-scanner": "^8.0.0",
     "expo-font": "~8.0.0",
     "expo-permissions": "latest",
+    "google-maps-react": "^2.0.2",
     "jwt-decode": "^2.2.0",
-    "prop-types": "^15.7.2",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
+    "prop-types": "^15.7.2",
     "react": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-elements": "^1.2.7",
+    "react-native-geolocation-service": "^4.0.0",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-open-map": "^3.0.0",
