--- a/app.json
+++ b/app.json
@@ -30,6 +30,9 @@
     },
     "ios": {
       "supportsTablet": true
-    }
-  }
+    },
+    "entryPoint": "node_modules/expo/AppEntry.js"
+  },
+  "displayName": "logistic-comander",
+  "name": "lc"
 }
