--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "react-native start",
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "postinstall": "jetify"
   },
   "dependencies": {
+    "@react-native-community/geolocation": "^1.4.2",
     "@react-native-community/masked-view": "^0.1.5",
     "animate.css": "^3.7.2",
     "axios": "^0.19.0",
@@ -15,22 +15,23 @@
     "expo-barcode-scanner": "^8.0.0",
     "expo-font": "~8.0.0",
     "expo-permissions": "latest",
-    "google-maps-react": "^2.0.2",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
     "react": "~16.9.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-dom": "~16.9.0",
+    "react-native": "~0.61.4",
     "react-native-elements": "^1.2.7",
-    "react-native-geolocation-service": "^4.0.0",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-loading-spinner-overlay": "^1.0.1",
+    "react-native-maps": "^0.26.1",
     "react-native-open-map": "^3.0.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-router-flux": "^4.0.6",
     "react-native-safe-area-context": "^0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-unimodules": "~0.7.0",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.1.0",
@@ -41,6 +42,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "babel-jest": "~24.9.0",
+    "jest": "~24.9.0",
+    "jetifier": "~1.6.4",
+    "metro-react-native-babel-preset": "~0.56.0",
+    "react-test-renderer": "~16.9.0",
     "@testing-library/react-native": "^5.0.3",
     "@types/enzyme": "^3.10.5",
     "@types/enzyme-adapter-react-16": "^1.0.6",
