--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-barcode-scanner": "^8.0.0",
     "expo-font": "~8.0.0",
     "expo-permissions": "latest",
+    "haversine": "^1.1.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.24.0",
     "native-base": "^2.13.8",
