--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postinstall": "jetify"
   },
   "dependencies": {
+    "@mapbox/polyline": "^1.1.0",
     "@react-native-community/geolocation": "^1.4.2",
     "@react-native-community/masked-view": "^0.1.5",
     "animate.css": "^3.7.2",
@@ -27,6 +28,7 @@
     "react-native-gesture-handler": "~1.5.0",
     "react-native-loading-spinner-overlay": "^1.0.1",
     "react-native-maps": "^0.26.1",
+    "react-native-maps-directions": "^1.7.3",
     "react-native-material-dropdown": "^0.11.1",
     "react-native-open-map": "^3.0.0",
     "react-native-reanimated": "~1.4.0",
