--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~36.0.0",
     "expo-barcode-scanner": "^8.0.0",
     "expo-font": "~8.0.0",
+    "expo-location": "^8.0.0",
     "expo-permissions": "latest",
     "haversine": "^1.1.1",
     "jwt-decode": "^2.2.0",
